@@ -1,3 +1,8 @@
+2006-05-17  Daniel Stone  <daniel@freedesktop.org>
+
+	* hw/xfree86/dixmods/Makefile.am:
+	Make DBE support conditional.  (Enrico Wiegelt)
+
 2006-05-15  Adam Jackson  <ajax@freedesktop.org>
 
 	* configure.ac:
